# HarmonyLeaksDetector

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
raphael/: build-profile.json5  oh-package-lock.json5  oh-package.json5
raphael/src/main/: module.json5
raphael/src/main/cpp/: CMakeLists.txt  Logger.h  MemoryCache.cpp  Raphael.cpp
raphael/src/main/cpp/include/: AllocPool.hpp  Cache.h  HookProxy.h  MemoryCache.h  PltGotHookProxy.h  Raphael.h
raphael/src/main/cpp/inline64/: And64InlineHook.cpp  And64InlineHook.hpp
raphael/src/main/cpp/types/libraphael/: Index.d.ts  oh-package.json5
raphael/src/main/cpp/unwind64/: backtrace_64.h
raphael/src/main/cpp/xDL/: xdl.c  xdl.h  xdl_iterate.c  xdl_iterate.h  xdl_linker.c  xdl_linker.h  xdl_lzma.c  xdl_util.c  xdl_util.h
raphael/src/main/cpp/xHook/: xh_core.c  xh_elf.c  xh_log.c  xh_log.h  xh_util.c
raphael/src/main/ets/pages/: Index.ets
raphael/src/main/ets/raphaelability/: RaphaelAbility.ets
raphael/src/main/ets/raphaelbackupability/: RaphaelBackupAbility.ets
raphael/src/main/resources/base/element/: string.json
raphael/src/mock/: Libraphael.mock.ets  mock-config.json5
raphael/src/ohosTest/: module.json5
